--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "express": "^5.1.0",
+    "prettier": "^3.6.1"
   }
 }
